--- a/webpack-project/package.json
+++ b/webpack-project/package.json
@@ -6,10 +6,33 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development"
   },
+  "babel": {
+    "presets": [
+      "env",
+      "stage-2",
+      "react"
+    ]
+  },
   "author": "ralexrivero",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "eslint": "^8.19.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "install": "^0.13.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
+  },
+  "dependencies": {
+    "npm": "^8.14.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
