--- a/webpack-project/package.json
+++ b/webpack-project/package.json
@@ -8,14 +8,16 @@
   },
   "babel": {
     "presets": [
-      "env",
-      "stage-2",
-      "react"
+      "@babel/preset-env",
+      "@babel/preset-react"
     ]
   },
   "author": "ralexrivero",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
